Add missing check for use_cups

Compiling printing_context_mac.mm requires cups.

Task-number: QTBUG-120248
Task-number: QTBUG-122407
Change-Id: Iee59bc96f5a7ee1151daed5ca3c10eb06d051b7b
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/583113
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
(cherry picked from commit c091eb3fa68e1e9c03147623071fa2015a9e3692)
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/583526